--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,10 +10,10 @@
             {% else %} 
                 {{ site.title }} 
             {% endif %}
-            | GDG Livin ZhuHai Life;-) </title>
+            | Reader as Neighbor ;-)</title>
 
-		<meta name="description" content="珠海GDG Blogging" />
-		<meta name="keywords" content="GDG ZhuHai" />
+		<meta name="description" content="阅读邻居 sharing center" />
+		<meta name="keywords" content="阅读邻居 杨早 石头 绿茶 读易洞" />
 		<meta name="author" content="Organizer: Zoom.Quiet" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="profile" href="http://gplus.to/Zoom.Quiet" />
