--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,7 @@
 		<span class="alignleft">
   			<img class="violet-logo" src="/static/images/ydlj.jpg"/>
 			<hgroup class="violet-site">	
-        		<h1><a href="/" ret="bootmark">ReaderNeighbor</a><span>.gitcafe.com</span></h1>
+        		<h1><a href="/" ret="bootmark">YueDuLinJu</a><span>.com</span></h1>
         		<h2>阅读邻居</h2>
      		</hgroup><!-- //violet-site -->	
 		</span>
