--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,8 +4,14 @@ layout: page
 
 <article itemscope itemtype="http://schema.org/Article" class="lost-post">
 {{ content }}
+
+{% include postfix.md %}
+
 </article>
+
 <p class="lost-pagebtn">
+{% include author.md %}
+
 <i class="icon-calendar"></i>{{  page.date | date: "%Y-%m-%d" }} &nbsp;
 
 <i class="icon-cogs"></i>
@@ -21,7 +27,7 @@ layout: page
   声明: 本文采用 
   <a href="http://creativecommons.org/licenses/by-nc-sa/3.0/" rel="nofollow" target="_blank" title="自由转载-非商用-非衍生-保持署名">BY-NC-SA</a> 
   授权。转载请注明转自: 
-  <a href="/about.html" title="{{ page.title }}" rel="nofollow">#ZHGDG#</a>
+  <a href="/about.html" title="{{ page.title }}" rel="nofollow">#阅读邻居#</a>
 </p>
 <section class="fn-clear">
   <h2>Related Posts:</h2>
