fixed Slogan in title

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,7 +29,7 @@
   			<img class="violet-logo" src="/static/images/ydlj.jpg"/>
 			<hgroup class="violet-site">	
         		<h1><a href="/" ret="bootmark">YueDuLinJu</a><span>.com</span></h1>
-        		<h2>阅读邻居</h2>
+        		<h2>「读不孤，必有邻」</h2>
      		</hgroup><!-- //violet-site -->	
 		</span>
 		<span class="alignright">
