--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -55,6 +55,9 @@ $(document).ready(function(){
 <hr/>
 {% include comments.md %}
 
+<hr/>
+{% include announce.html %}
+
 
 <section class="fn-clear">
   <h2>Related Posts:</h2>
