--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -28,6 +28,8 @@ $(document).ready(function(){
 {{ content }}
 
 {% include postfix.md %}
+<hr/>
+{% include announce.html %}
 
 </article>
 
@@ -52,11 +54,9 @@ $(document).ready(function(){
   <a href="/about.html" title="{{ page.title }}" rel="nofollow">#阅读邻居#</a>
 </p>
 
-<hr/>
-{% include announce.html %}
 
 <hr/>
-{% include comments.md %}
+{% include utteranc_es.md %}
 
 
 
